--- a/Tema5/FormsRecup/index.html
+++ b/Tema5/FormsRecup/index.html
@@ -37,14 +37,14 @@
     <div class="col">
       <div class="form-outline">
         <label class="form-label" for="nombre">Nombre</label>
-        <input type="text" id="nombre" class="form-control" pattern="^[a-zA-Z ]{2,40}$/" required>
+        <input type="text" id="nombre" class="form-control" pattern="^[a-zA-Z ]{2,40}$" required>
         
       </div>
     </div>
     <div class="col">
       <div class="form-outline">
         <label class="form-label" for="apellidos">Apellidos</label>
-        <input type="text" id="apellidos" class="form-control" pattern="^[a-zA-Z ]{2,50}$/" required/>
+        <input type="text" id="apellidos" class="form-control" pattern="^[a-zA-Z ]{2,50}$" required/>
       </div>
     </div>
   </div>
@@ -52,7 +52,7 @@
   <!-- Text input -->
   <div class="form-outline mb-4">
     <label class="form-label" for="empresa">Empresa</label>
-    <input type="text" id="empresa" class="form-control" pattern="^[a-zA-Z1-0 ]{1,60}$/"/>
+    <input type="text" id="empresa" class="form-control" pattern="^[a-zA-Z1 ]{1,60}$"/>
   </div>
 
     <!-- 2 column grid layout with text inputs for the first and last names -->
